add execute code option
